tests/lean/macroStack.lean.expected.out
macroStack.lean:4:5: error: unknown identifier 'x'
macroStack.lean:8:6: error: unknown identifier 'x'
with resulting expansion
  Greater._@._internal._hyg.0 x 0 
while expanding
  x > 0 
while expanding
  if h:(x > 0) then 1 else 0 
